--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,9 +35,19 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     //Firebase
-    implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.google.firebase:firebase-core:16.0.7'
+    implementation 'com.google.firebase:firebase-auth:16.1.0'
+
+    //Google
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    // Required -- JUnit 4 framework
+    // Optional -- Robolectric environment
+    testImplementation 'androidx.test:core:1.0.0'
+    // Optional -- Mockito framework
+    testImplementation 'org.mockito:mockito-core:1.10.19'
 }
